--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/core": "^1.23.0",
+    "@genkit-ai/flow": "^0.5.17",
     "@genkit-ai/google-genai": "^1.23.0",
     "@genkit-ai/googleai": "^1.23.0",
     "@genkit-ai/next": "^1.23.0",
+    "@genkit-ai/vertexai": "^1.23.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -39,6 +40,7 @@
     "dotenv": "^17.2.3",
     "firebase": "^12.6.0",
     "genkit": "^1.23.0",
+    "genkitx-ollama": "^1.23.0",
     "lucide-react": "^0.553.0",
     "next": "^15.5.6",
     "react": "^18.2.0",
@@ -58,5 +60,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.9.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
