--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 9002 --hostname 0.0.0.0",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
@@ -13,10 +13,6 @@
   },
   "dependencies": {
     "@genkit-ai/flow": "^0.5.17",
-    "@genkit-ai/google-genai": "^1.23.0",
-    "@genkit-ai/googleai": "^1.23.0",
-    "@genkit-ai/next": "^1.23.0",
-    "@genkit-ai/vertexai": "^1.23.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -39,7 +35,6 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "firebase": "^12.6.0",
-    "genkit": "^1.23.0",
     "genkitx-ollama": "^1.23.0",
     "lucide-react": "^0.553.0",
     "next": "^15.5.6",
@@ -56,7 +51,6 @@
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.0.1",
-    "genkit-cli": "^1.23.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.9.3"
