--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "genkitx-ollama": "^1.23.0",
     "lucide-react": "^0.553.0",
     "next": "^15.5.6",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^18.2.0",
