--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "genkitx-ollama": "^1.23.0",
     "lucide-react": "^0.553.0",
     "next": "^15.5.6",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-day-picker": "^9.11.1",
