--- a/package.json
+++ b/package.json
@@ -3,21 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 9003 --hostname 0.0.0.0",
+    "dev": "next dev",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postinstall": "patch-package"
   },
   "dependencies": {
-    "@cloudinary/react": "^1.14.3",
-    "@cloudinary/url-gen": "^1.22.0",
-    "@genkit-ai/ai": "^1.24.0",
-    "@genkit-ai/flow": "^0.5.17",
-    "@genkit-ai/google-genai": "^1.24.0",
-    "@genkit-ai/googleai": "^1.24.0",
+    "@distube/ytdl-core": "^4.13.5",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -28,49 +24,41 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-menubar": "^1.1.16",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-progress": "^1.1.8",
-    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slider": "^1.3.6",
-    "@radix-ui/react-switch": "^1.2.6",
-    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
     "assemblyai": "^4.19.0",
-    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^17.2.3",
-    "embla-carousel-react": "^8.6.0",
     "firebase": "^12.6.0",
-    "genkitx-ollama": "^1.23.0",
     "lucide-react": "^0.553.0",
-    "next": "^15.5.6",
-    "next-pwa": "^5.6.0",
-    "next-themes": "^0.4.6",
-    "react": "^18.2.0",
-    "react-day-picker": "^9.11.1",
-    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.76"
+    "ytdl-core": "npm:@distube/ytdl-core@^4.13.5",
+    "zod": "^3.25.0"
   },
   "devDependencies": {
-    "@types/node": "^20.19.25",
-    "@types/react": "^18.3.26",
-    "@types/react-dom": "^18.3.7",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8.5.6",
+    "@types/memcached": "^2.2.10",
+    "@types/mysql": "^2.15.27",
+    "@types/node": "^20.19.24",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/request": "^2.48.13",
+    "firebase-tools": "^14.24.0",
+    "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.9.3"
+    "typescript": "^5"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "overrides": {
+    "next": "14.2.4"
+  }
 }
