--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@distube/ytdl-core": "^4.13.5",
+    "@genkit-ai/core": "^1.25.0",
     "@genkit-ai/googleai": "^1.25.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^4.1.3",
