--- a/package.json
+++ b/package.json
@@ -4,18 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "NODE_ENV=production next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "patch-package"
+    "lint": "next lint"
   },
   "dependencies": {
     "@distube/ytdl-core": "^4.13.5",
-    "@genkit-ai/core": "^1.25.0",
-    "@genkit-ai/googleai": "^1.25.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -41,12 +35,15 @@
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.6.0",
     "firebase": "^12.6.0",
     "lucide-react": "^0.553.0",
-    "next": "^14.2.15",
+    "next": "^14.2.3",
     "next-themes": "^0.4.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-day-picker": "^9.12.0",
+    "react-dom": "^18.3.1",
+    "react-draggable": "^4.5.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.4.0",
@@ -57,9 +54,9 @@
   "devDependencies": {
     "@types/memcached": "^2.2.10",
     "@types/mysql": "^2.15.27",
-    "@types/node": "^20.19.24",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
     "@types/request": "^2.48.13",
     "autoprefixer": "^10.4.22",
     "firebase-tools": "^14.24.0",
