--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextn",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -40,6 +41,7 @@
     "lucide-react": "^0.553.0",
     "next": "^14.2.3",
     "next-themes": "^0.4.6",
+    "node-fetch": "^2.7.0",
     "react": "^18.3.1",
     "react-day-picker": "^9.12.0",
     "react-dom": "^18.3.1",
