--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,33 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Mobile build artifacts
+mobile-files/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Next.js build output
+.next/
+node_modules
+node_modules/
 
-# testing
-/coverage
+# Dependencies
+node_modules/
 
-# next.js
-/.next/
-/out/
+# Build outputs
+.next/
+out/
+dist/
 
-# production
-/build
+# Environment
+.env
+.env.local
+.env*.local
 
-# misc
+# IDE
+.vscode/
+.idea/
+
+# OS
 .DS_Store
-*.pem
+Thumbs.db
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-.genkit/*
-.env*
-
-# firebase
-firebase-debug.log
-firestore-debug.log
+# Test files
+*.test.js
+*.spec.js
+test-*.js
