--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,31 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node dependencies
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Vercel build output
+.vercel/
 
-# testing
-/coverage
+# Build output
+.next/
+out/
+build/
 
-# next.js
-/.next/
-/out/
+# Android build artifacts
+mobile-files/bubblewrap-workspace/
+*.aab
+*.apk
+*.idsig
+*.jar
 
-# production
-/build
+# Environment variables
+.env
+.env.local
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Log files
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-.genkit/*
-.env*
-
-# firebase
-firebase-debug.log
-firestore-debug.log
+# Misc
+.DS_Store
+Captionize-Captionize-1
