--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,2 @@
-# Node dependencies
-node_modules/
-
-# Vercel build output
-.vercel/
-
-# Build output
 .next/
-out/
-build/
-
-# Android build artifacts
-mobile-files/bubblewrap-workspace/
-*.aab
-*.apk
-*.idsig
-*.jar
-
-# Environment variables
-.env
-.env.local
-
-# Log files
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Misc
-.DS_Store
+node_modules
