--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@distube/ytdl-core": "^4.13.5",
+    "@genkit-ai/ai": "^1.25.0",
+    "@genkit-ai/vertexai": "^1.25.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
