--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/subtitle": "^2.0.6",
     "assemblyai": "^4.19.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -50,6 +51,7 @@
     "react-draggable": "^4.5.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "subtitle": "^4.2.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "ytdl-core": "npm:@distube/ytdl-core@^4.13.5",
