--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.5.0",
     "react-hook-form": "^7.54.2",
+    "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.7",
     "subtitle": "^4.2.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
