--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "lucide-react": "^0.553.0",
     "next": "^14.2.3",
     "next-themes": "^0.4.6",
