After Env Backup= 96

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,7 @@
         "./src/*"
       ]
     },
-    "target": "ES2017",
-    "strictNullChecks": true
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
