--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "patch-package"
+    "lint": "next lint"
   },
   "dependencies": {
     "@distube/ytdl-core": "^4.13.5",
-    "@genkit-ai/ai": "^1.25.0",
-    "@genkit-ai/vertexai": "^1.25.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -33,7 +30,6 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@types/subtitle": "^2.0.6",
     "assemblyai": "^4.19.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
@@ -51,10 +47,7 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.5.0",
     "react-hook-form": "^7.54.2",
-    "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.1",
-    "sonner": "^2.0.7",
-    "subtitle": "^4.2.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "ytdl-core": "npm:@distube/ytdl-core@^4.13.5",
