--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@distube/ytdl-core": "^4.13.5",
+    "@genkit-ai/core": "^1.26.0",
+    "@genkit-ai/googleai": "^1.26.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -30,7 +32,8 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "assemblyai": "^4.19.0",
+    "@types/wav": "^1.0.4",
+    "assemblyai": "^4.22.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
@@ -38,6 +41,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.6.0",
+    "genkit": "^1.26.0",
     "lucide-react": "^0.553.0",
     "next": "^14.2.3",
     "next-themes": "^0.4.6",
@@ -50,6 +54,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "wav": "^1.0.2",
     "ytdl-core": "npm:@distube/ytdl-core@^4.13.5",
     "zod": "^3.25.0"
   },
